cmake_minimum_required(VERSION 3.23)
project(CLion_programming)

set(CMAKE_CXX_STANDARD 23)

add_executable(CLion_programming main.cpp 1_lab/pass_by_reference.h 1_lab/pass_by_reference.cpp 2_lab/string_parser.h 2_lab/string_parser.cpp 2_lab/menu_2_lab.h 2_lab/menu_2_lab.cpp 2_lab/main_2_lab.cpp 3_lab/triangle_on_the_plane/triangle.h 3_lab/triangle_on_the_plane/triangle.cpp)
