cmake_minimum_required(VERSION 3.23)
project(CLion_programming)

set(CMAKE_CXX_STANDARD 23)

add_executable(CLion_programming main.cpp 1_lab/pass_by_reference.h 1_lab/pass_by_reference.cpp 2_lab/string_parser.h 2_lab/string_parser.cpp 2_lab/menu_2_lab.h 2_lab/menu_2_lab.cpp 2_lab/main_2_lab.cpp 3_lab/triangle_on_the_plane/triangle.h 3_lab/triangle_on_the_plane/triangle.cpp 3_lab/query/que.h 3_lab/query/que.cpp 3_lab/query/test_que.cpp 3_lab/triangle_on_the_plane/test_triangle.cpp 3_lab/main_3_lab.cpp 5_lab/patterns_exceptions.h 4_lab/basic_classes.h 4_lab/circle/circle.h 4_lab/circle/circle.cpp 4_lab/rectangle/rectangle.h 4_lab/rectangle/rectangle.cpp 4_lab/menu_4_lab.h 4_lab/menu_4_lab.cpp 4_lab/main_4_lab.cpp)
